fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ button {
   position: fixed;
   top: 0;
   border-bottom: 5px solid #ecc4ff;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
   z-index: 3;
 }
 
@@ -116,7 +116,7 @@ button {
   /* Take full size */
   /* height: 100vh; */
   width: 50%;
-  margin-bottom:30px;}
+  margin-bottom:0px;}
 
 .personQueueList li {
   display: inline-block;
